--- a/jqtag.css
+++ b/jqtag.css
@@ -4,3 +4,10 @@
 [hidden]{
 	display: none!important;	
 }
+.hide, [hide] {
+ display: none;
+}
+.no-event, [no-event] {
+  opacity: 0.2;
+  pointer-events: none !important;
+}
